<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:rowCount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/matrA"
                    android:layout_column="2"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/saveA"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_load_24"
                    android:layout_marginStart="10dp" />
                <Button
                    android:id="@+id/loadA"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:drawableLeft="@drawable/ic_basiline_upload_24"
                    android:layout_marginStart="10dp" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="2">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="1"
                    android:text="@string/rows"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/numRowsA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_marginStart="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnSpan="1"
                    android:layout_marginStart="15dp"
                    android:text="@string/cols"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/numColsA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_columnSpan="1"
                    android:layout_marginStart="4dp" />

                <Button
                    android:id="@+id/clearA"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:layout_marginStart="10dp"
                    android:drawableLeft="@drawable/ic_baseline_clear_all_24" />
            </GridLayout>


            <GridLayout
                android:id="@+id/matrixA"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:layout_marginBottom="10dp"
                android:rowCount="3">
            </GridLayout>

            <Button
                android:id="@+id/swap"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:drawableLeft="@drawable/ic_baseline_swap_vert_24" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:rowCount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:text="@string/matrB"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/saveB"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:drawableLeft="@drawable/ic_baseline_load_24"
                    android:layout_marginStart="10dp" />
                <Button
                    android:id="@+id/loadB"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="4"
                    android:drawableLeft="@drawable/ic_basiline_upload_24"
                    android:layout_marginStart="10dp" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="1"
                    android:text="@string/rows"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/numRowsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_marginStart="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnSpan="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/cols"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/numColsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_columnSpan="1"
                    android:layout_marginStart="4dp" />

                <Button
                    android:id="@+id/clearB"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawableLeft="@drawable/ic_baseline_clear_all_24" />

            </GridLayout>

            <GridLayout
                android:id="@+id/matrixB"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:rowCount="3">

            </GridLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rowCount="1">

                    <Button
                        android:id="@+id/add"
                        android:layout_width="72dp"
                        android:backgroundTint="@color/gray"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:textColor="@color/white" />


                    <Button
                        android:id="@+id/sub"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/gray"
                        android:text="@string/subtract"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/mul"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/gray"
                        android:text="@string/multiply"
                        android:textColor="@color/white" />

                </GridLayout>
            </HorizontalScrollView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="1">

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="New ToggleButton"
                    android:textOff="A"
                    android:textOn="B" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/transpose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/gray"
                            android:text="@string/trans"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/inverse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="@color/gray"
                            android:text="@string/inv"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/determinant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:backgroundTint="@color/gray"
                            android:text="@string/det"
                            android:textSize="12sp" />


                    </GridLayout>
                </HorizontalScrollView>
            </GridLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
